--- a/Root/css/subpage.css
+++ b/Root/css/subpage.css
@@ -48,7 +48,10 @@ header{
 }
 
 .nav-m-content{
-    margin-top: 30%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     text-align: center;
 }
 
